# dictstore

./: .gitignore  README.md  install.sh  run_tests.sh  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  pubslish-to-test-pypi.yml  run_python_tests.yml
src/dictstore/: __init__.py  dictstore.py  exceptions.py  file_handler.py  helpers.py  interface.py
tests/: test.py
