[metadata]
name = dictstore
version = 0.0.1
author = Sai Sampath Kumar Balivada
author_email = balivadask2000@gmail.com
description = local datastore with a dictionary interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sampathbalivada/dictstore
project_urls =
    Bug Tracker = https://github.com/sampathbalivada/dictstore/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src